export const snapshot = {};

snapshot[`model 1`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_index: Expr {
            raw: {
              object: {
                name: "users_discord_id",
                source: Expr {
                  raw: {
                    collection: "user",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              index: "users_discord_id",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                name: "users_discord_id",
                source: Expr {
                  raw: {
                    collection: "user",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
          update: Expr {
            raw: {
              index: "users_discord_id",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 2`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_index: Expr {
            raw: {
              object: {
                name: "guilds_discord_id",
                source: Expr {
                  raw: {
                    collection: "guild",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              index: "guilds_discord_id",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                name: "guilds_discord_id",
                source: Expr {
                  raw: {
                    collection: "guild",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
          update: Expr {
            raw: {
              index: "guilds_discord_id",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 3`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_index: Expr {
            raw: {
              object: {
                name: "inventories_instance_user",
                source: Expr {
                  raw: {
                    collection: "inventory",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "user",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              index: "inventories_instance_user",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                name: "inventories_instance_user",
                source: Expr {
                  raw: {
                    collection: "inventory",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "user",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
          update: Expr {
            raw: {
              index: "inventories_instance_user",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 4`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_function: Expr {
            raw: {
              object: {
                body: Expr {
                  raw: {
                    query: Expr {
                      raw: {
                        expr: Expr {
                          raw: {
                            in: Expr {
                              raw: {
                                in: Expr {
                                  raw: {
                                    params: Expr {
                                      raw: {
                                        object: {
                                          data: Expr {
                                            raw: {
                                              object: {
                                                availablePulls: Expr {
                                                  raw: {
                                                    var: "rechargedPulls",
                                                  },
                                                },
                                                rechargeTimestamp: Expr {
                                                  raw: {
                                                    else: Expr {
                                                      raw: {
                                                        offset: Expr {
                                                          raw: {
                                                            multiply: Expr {
                                                              raw: [
                                                                Expr {
                                                                  raw: {
                                                                    var: "diffPulls",
                                                                  },
                                                                },
                                                                15,
                                                              ],
                                                            },
                                                          },
                                                        },
                                                        time_add: Expr {
                                                          raw: {
                                                            var: "rechargeTimestamp",
                                                          },
                                                        },
                                                        unit: "minutes",
                                                      },
                                                    },
                                                    if: Expr {
                                                      raw: {
                                                        gte: Expr {
                                                          raw: [
                                                            Expr {
                                                              raw: {
                                                                var: "rechargedPulls",
                                                              },
                                                            },
                                                            5,
                                                          ],
                                                        },
                                                      },
                                                    },
                                                    then: null,
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    update: Expr {
                                      raw: {
                                        from: Expr {
                                          raw: {
                                            var: "inventory",
                                          },
                                        },
                                        select: "ref",
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    rechargeTimestamp: Expr {
                                      raw: {
                                        default: Expr {
                                          raw: {
                                            now: null,
                                          },
                                        },
                                        from: Expr {
                                          raw: {
                                            var: "inventory",
                                          },
                                        },
                                        select: Expr {
                                          raw: [
                                            "data",
                                            "rechargeTimestamp",
                                          ],
                                        },
                                      },
                                    },
                                  },
                                  {
                                    currentPulls: Expr {
                                      raw: {
                                        from: Expr {
                                          raw: {
                                            var: "inventory",
                                          },
                                        },
                                        select: Expr {
                                          raw: [
                                            "data",
                                            "availablePulls",
                                          ],
                                        },
                                      },
                                    },
                                  },
                                  {
                                    newPulls: Expr {
                                      raw: {
                                        divide: Expr {
                                          raw: [
                                            Expr {
                                              raw: {
                                                other: Expr {
                                                  raw: {
                                                    now: null,
                                                  },
                                                },
                                                time_diff: Expr {
                                                  raw: {
                                                    var: "rechargeTimestamp",
                                                  },
                                                },
                                                unit: "minutes",
                                              },
                                            },
                                            15,
                                          ],
                                        },
                                      },
                                    },
                                  },
                                  {
                                    rechargedPulls: Expr {
                                      raw: {
                                        min: Expr {
                                          raw: [
                                            5,
                                            Expr {
                                              raw: {
                                                add: Expr {
                                                  raw: [
                                                    Expr {
                                                      raw: {
                                                        var: "currentPulls",
                                                      },
                                                    },
                                                    Expr {
                                                      raw: {
                                                        var: "newPulls",
                                                      },
                                                    },
                                                  ],
                                                },
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                  },
                                  {
                                    diffPulls: Expr {
                                      raw: {
                                        subtract: Expr {
                                          raw: [
                                            Expr {
                                              raw: {
                                                var: "rechargedPulls",
                                              },
                                            },
                                            Expr {
                                              raw: {
                                                var: "currentPulls",
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                user: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "user",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "userId",
                                                          },
                                                        },
                                                        inventories: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "users_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "userId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                guild: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                guild: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: Expr {
                                                                  raw: [
                                                                  ],
                                                                },
                                                                main: true,
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                instances: Expr {
                                                                  raw: [
                                                                    Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            from: Expr {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: Expr {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                inventory: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInventory",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInventory: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "inventory",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                availablePulls: 5,
                                                                characters: Expr {
                                                                  raw: [
                                                                  ],
                                                                },
                                                                instance: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "instance",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                lastPull: null,
                                                                rechargeTimestamp: null,
                                                                user: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "user",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedInstance: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                inventories: Expr {
                                                                  raw: {
                                                                    append: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInventory",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    collection: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "instance",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "inventories",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedUser: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                inventories: Expr {
                                                                  raw: {
                                                                    append: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInventory",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    collection: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "user",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "inventories",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "user",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "inventories_instance_user",
                                              },
                                            },
                                            terms: Expr {
                                              raw: [
                                                Expr {
                                                  raw: {
                                                    from: Expr {
                                                      raw: {
                                                        var: "instance",
                                                      },
                                                    },
                                                    select: "ref",
                                                  },
                                                },
                                                Expr {
                                                  raw: {
                                                    from: Expr {
                                                      raw: {
                                                        var: "user",
                                                      },
                                                    },
                                                    select: "ref",
                                                  },
                                                },
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: Expr {
                          raw: [
                            "userId",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "get_user_inventory",
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              function: "get_user_inventory",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                body: Expr {
                  raw: {
                    query: Expr {
                      raw: {
                        expr: Expr {
                          raw: {
                            in: Expr {
                              raw: {
                                in: Expr {
                                  raw: {
                                    params: Expr {
                                      raw: {
                                        object: {
                                          data: Expr {
                                            raw: {
                                              object: {
                                                availablePulls: Expr {
                                                  raw: {
                                                    var: "rechargedPulls",
                                                  },
                                                },
                                                rechargeTimestamp: Expr {
                                                  raw: {
                                                    else: Expr {
                                                      raw: {
                                                        offset: Expr {
                                                          raw: {
                                                            multiply: Expr {
                                                              raw: [
                                                                Expr {
                                                                  raw: {
                                                                    var: "diffPulls",
                                                                  },
                                                                },
                                                                15,
                                                              ],
                                                            },
                                                          },
                                                        },
                                                        time_add: Expr {
                                                          raw: {
                                                            var: "rechargeTimestamp",
                                                          },
                                                        },
                                                        unit: "minutes",
                                                      },
                                                    },
                                                    if: Expr {
                                                      raw: {
                                                        gte: Expr {
                                                          raw: [
                                                            Expr {
                                                              raw: {
                                                                var: "rechargedPulls",
                                                              },
                                                            },
                                                            5,
                                                          ],
                                                        },
                                                      },
                                                    },
                                                    then: null,
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    update: Expr {
                                      raw: {
                                        from: Expr {
                                          raw: {
                                            var: "inventory",
                                          },
                                        },
                                        select: "ref",
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    rechargeTimestamp: Expr {
                                      raw: {
                                        default: Expr {
                                          raw: {
                                            now: null,
                                          },
                                        },
                                        from: Expr {
                                          raw: {
                                            var: "inventory",
                                          },
                                        },
                                        select: Expr {
                                          raw: [
                                            "data",
                                            "rechargeTimestamp",
                                          ],
                                        },
                                      },
                                    },
                                  },
                                  {
                                    currentPulls: Expr {
                                      raw: {
                                        from: Expr {
                                          raw: {
                                            var: "inventory",
                                          },
                                        },
                                        select: Expr {
                                          raw: [
                                            "data",
                                            "availablePulls",
                                          ],
                                        },
                                      },
                                    },
                                  },
                                  {
                                    newPulls: Expr {
                                      raw: {
                                        divide: Expr {
                                          raw: [
                                            Expr {
                                              raw: {
                                                other: Expr {
                                                  raw: {
                                                    now: null,
                                                  },
                                                },
                                                time_diff: Expr {
                                                  raw: {
                                                    var: "rechargeTimestamp",
                                                  },
                                                },
                                                unit: "minutes",
                                              },
                                            },
                                            15,
                                          ],
                                        },
                                      },
                                    },
                                  },
                                  {
                                    rechargedPulls: Expr {
                                      raw: {
                                        min: Expr {
                                          raw: [
                                            5,
                                            Expr {
                                              raw: {
                                                add: Expr {
                                                  raw: [
                                                    Expr {
                                                      raw: {
                                                        var: "currentPulls",
                                                      },
                                                    },
                                                    Expr {
                                                      raw: {
                                                        var: "newPulls",
                                                      },
                                                    },
                                                  ],
                                                },
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                  },
                                  {
                                    diffPulls: Expr {
                                      raw: {
                                        subtract: Expr {
                                          raw: [
                                            Expr {
                                              raw: {
                                                var: "rechargedPulls",
                                              },
                                            },
                                            Expr {
                                              raw: {
                                                var: "currentPulls",
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                user: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "user",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "userId",
                                                          },
                                                        },
                                                        inventories: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "users_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "userId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                guild: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                guild: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: Expr {
                                                                  raw: [
                                                                  ],
                                                                },
                                                                main: true,
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                instances: Expr {
                                                                  raw: [
                                                                    Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            from: Expr {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: Expr {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                inventory: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInventory",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInventory: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "inventory",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                availablePulls: 5,
                                                                characters: Expr {
                                                                  raw: [
                                                                  ],
                                                                },
                                                                instance: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "instance",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                lastPull: null,
                                                                rechargeTimestamp: null,
                                                                user: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "user",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedInstance: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                inventories: Expr {
                                                                  raw: {
                                                                    append: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInventory",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    collection: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "instance",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "inventories",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedUser: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                inventories: Expr {
                                                                  raw: {
                                                                    append: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInventory",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    collection: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "user",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "inventories",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "user",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "inventories_instance_user",
                                              },
                                            },
                                            terms: Expr {
                                              raw: [
                                                Expr {
                                                  raw: {
                                                    from: Expr {
                                                      raw: {
                                                        var: "instance",
                                                      },
                                                    },
                                                    select: "ref",
                                                  },
                                                },
                                                Expr {
                                                  raw: {
                                                    from: Expr {
                                                      raw: {
                                                        var: "user",
                                                      },
                                                    },
                                                    select: "ref",
                                                  },
                                                },
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: Expr {
                          raw: [
                            "userId",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "get_user_inventory",
              },
            },
          },
          update: Expr {
            raw: {
              function: "get_user_inventory",
            },
          },
        },
      },
    },
  },
]
`;
